--- a/blog-single.html
+++ b/blog-single.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog Single - FlexStart Bootstrap Template</title>
+  <title>TECHMINT TECHNOLOGY LIMITED </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span>FlexStart</span>
+        <span>TECHMINT</span>
       </a>
 
       <nav id="navbar" class="navbar">
